@@ -1,5 +1,6 @@
 Change in GNU Prolog version 1.5.1
 
+* fix issue #9: format/2-3 now also accept a list of character for format
 * fix problem in arm32 mapper when passing more than 8 double to a C function
 * fix issue #7: length/2 now emits a type_error(list) only if the strict_mode flag is on
 * fix infinite loop in debugger for multifile/dynamic predicates (issue #12)
